[tool.poetry]
name = "repl_python3_TensorFlow-Pokemon-Course"
version = "0.1.0"
description = ""
authors = ["MikeOwino <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
sklearn = "^0.0"
tensorflow = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
